                 to Xamine drive Gui to create the fit.
  Oct 23, 2006 - Added documentation for the fit command and how to 
                 extend the fitting subsystem.
  Oct 24, 2006 - Fixed error in log display of fitlines (actually convert1d error).
                 Made fitlines solid lines not just dots.
                 Fixed defect introduced with fitlines - where 1-d objects
                 got deleted on updates.
                 Ensured that fitlines get sent in on sbind. 
                 Added framework for user processing of Xamine buttons in
                 the Xamine custom button box.
 Oct 25, 2006  - CXamineEvent::addButtonHandler needs to be public.
                 Expose ability to get the histogrammer etc. in SpecTcl.h
                 Expose fit id allocation in CfitCommand.
                 Added credits for gsl.{cpp,h} and permission grant to the
 November 1, 2006 - Fix some issues for building from the distro rather than
                 from CVS.
                 distribution
 Nov  2, 2006  - Get the calibrated parameter contrib install to stop polluting
                 $(prefix)/include with its headers.
               - Fix wierd issues with make dist on ubuntu edgy edge...
                 was not putting config dir into the distro.=======
                 distribution
 Nov 3, 2006   - Fix error introduced in scaler display by attempt to 
                 format totals as %u when they are actually floating point
                 exactly to keep them from overflowing.
               - Support a default buffersize preference.
 Nov 8, 2006   - Add Xamine restart handler capability to Xamine interface.
 Nov 9, 2006   - Install CHANGELOG 
 Nov 17, 2006  - Fix defect 228 - Xamine.Defaults can get printing defaults
                 all garbled causing printing to fail or crash Xamine
               - Fix defect 299 - setup.tcl is obsolete now, don't distribute
                 in Skel dir.